# tjc-usart-hmi-toolchain

./: .gitignore  CONTRIBUTING.md  CURRENT_TARGET_LIMITATIONS.md  EXTERNALS.md  FEATURE_STATUS.md  LICENSE  README.md  README.zh-CN.md  SCENE_BUILDER.md  USART_HMI_ROADMAP_2026-05-04.md  official_lcd_test_TJC8048X543_011_20260504.inspect.json  pyproject.toml  tft_reference_nextion43_18may.json
examples/: README.md  all_supported_controls_completion_audit_2026-05-17.json  current_target_full_completion_audit_2026-05-20.json  current_target_unsupported_official_drop_verified_2026-05-17.json  full_rebuild_control_broadening_2026-05-17.json  live_widget_proof_matrix_2026-05-17.json  live_widget_worklog_2026-05-17.md  widget_capability_matrix_2026-05-17.json
skills/: README.md
tests/: test_crop_image_demo.py  test_current_target_completion_audit_artifact.py  test_dtr_rts_pulse_probe.py  test_dtr_rts_pulse_probe_summary_artifact.py  test_econtest_templates.py  test_editor_tft_build.py  test_event_bytecode.py  test_external_picture_demo_runner.py  test_find_hmi_event_fixtures.py  test_hmi_cfs.py  test_hmi_donor_fixture_corpus.py  test_hmi_donor_lowlevel_capability_summary.py  test_hmi_donor_patch.py  test_hmi_donors.py  test_hmi_pagesafe.py  test_lifecycle_runtime_equivalence_report.py  test_lifecycle_runtime_smoke_index_artifact.py  test_live_case_smoke.py  test_live_page_smoke.py  test_live_smoke_migration_audit_artifact.py  test_live_tft_smoke.py  test_media_single_audio_live_artifact.py  test_media_widgets.py  test_next_live_commands_artifact.py  test_official_gui_download_button_probe_summary_artifact.py  test_official_gui_download_button_state_artifact.py  test_official_gui_download_recovery_attempt_artifact.py  (+86 more)
(+399 files in other folders)
